# starlette-https-redirect

./: .gitignore  README.md  pyproject.toml
src/starlette_https_redirect/: __init__.py  middleware.py
tests/: test_middleware.py
